[gd_scene load_steps=5 format=3 uid="uid://8jt76iweuoeh"]

[ext_resource type="Script" uid="uid://bbs3ntpco8ana" path="res://Scenes/LoadingScene/loading_scene.gd" id="1_75s8g"]

[sub_resource type="Animation" id="Animation_75s8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cfnjn"]
resource_name = "start"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fxsqg"]
_data = {
&"RESET": SubResource("Animation_75s8g"),
&"start": SubResource("Animation_cfnjn")
}

[node name="LoadingScene" type="CanvasLayer"]
script = ExtResource("1_75s8g")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "加载中..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="TipLabel" type="Label" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "小贴士：点击鼠标可以挖掘方块"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fxsqg")
}
